--- a/editors/emacs23/Makefile
+++ b/editors/emacs23/Makefile
@@ -3,7 +3,7 @@
 # Date created:		29 October 1994
 # Whom:			jkh
 #
-# $Id: Makefile,v 1.29 1997/07/17 10:38:15 asami Exp $
+# $Id: Makefile,v 1.30 1997/12/14 02:03:53 asami Exp $
 #
 
 DISTNAME=	emacs-19.34b
@@ -12,6 +12,7 @@ MASTER_SITES=	${MASTER_SITE_GNU}
 
 MAINTAINER=	ports@FreeBSD.ORG
 
+NO_LATEST_LINK=	yes
 WRKSRC=		${WRKDIR}/emacs-19.34
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
