--- a/print/a2ps43-letter/Makefile
+++ b/print/a2ps43-letter/Makefile
@@ -3,7 +3,7 @@
 # Date created:         6 November 1994
 # Whom:                 jmz & David O'Brien (obrien@cs.ucdavis.edu)
 #
-# $Id: Makefile,v 1.14 1998/02/25 02:33:52 obrien Exp $
+# $Id: Makefile,v 1.15 1998/02/25 02:35:23 obrien Exp $
 #
 
 DISTNAME=	a2ps
@@ -14,6 +14,7 @@ DISTFILES=	a2ps.V4.3.tar.gz
 
 MAINTAINER=	obrien@FreeBSD.org
 
+NO_LATEST_LINK=	yes
 MANUAL_PACKAGE_BUILD=	PAPERSIZE has to be set to Letter A4
 MAKE_FLAGS?=	WIDTH=${WIDTH} HEIGHT=${HEIGHT} A4_PAPERSIZE=${A4_PAPERSIZE} -f
 NO_WRKSUBDIR=	yes
