--- a/emulators/bsvc/Makefile
+++ b/emulators/bsvc/Makefile
@@ -1,15 +1,17 @@
 # New ports collection Makefile for:	bsvc
 # Version required:	2.0
-# Date released:	03-Mar-1997
-# Whom			tenser
+# Date created:		03-Mar-1997
+# Whom:			tenser
 #
-# $Id: Makefile,v 1.3 1997/03/07 08:05:09 tg Exp $
+# $Id: Makefile,v 1.4 1997/04/20 13:19:01 wosch Exp $
 #
 
-DISTNAME=	bsvc-2.0
+DISTNAME=	bsvc-2.0-src
+PKGNAME=	bsvc-2.0
 CATEGORIES=	emulators tk41
-MASTER_SITES=	ftp://ftp.ncsu.edu/pub/eos/pub/bsvc/distribution/
-EXTRACT_SUFX=	-src.tar.z
+MASTER_SITES=	${MASTER_SITE_SUNSITE}
+MASTER_SITE_SUBDIR=	system/emulators
+EXTRACT_SUFX=	.tar.z
 
 MAINTAINER=	tenser@spitfire.ecsel.psu.edu
 
