--- a/misc/p5-Locale-Codes/Makefile
+++ b/misc/p5-Locale-Codes/Makefile
@@ -1,13 +1,13 @@
 # New ports collection makefile for:    p5-Locale-Codes
-# Version required:			0.003
+# Version required:			1.00
 # Date created:				June 26th 1997
 # Whom:	      				James FitzGibbon <jfitz@FreeBSD.ORG>
 #
-#   $Id$
+# $Id: Makefile,v 1.1.1.1 1997/06/27 01:51:12 jfitz Exp $
 #
 
-DISTNAME=	Locale-Codes-0.003
-PKGNAME=	p5-Locale-Codes-0.003
+DISTNAME=	Locale-Codes-1.00
+PKGNAME=	p5-Locale-Codes-1.00
 CATEGORIES=	misc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN}
 MASTER_SITE_SUBDIR=	Locale
