--- a/japanese/kcc/Makefile
+++ b/japanese/kcc/Makefile
@@ -3,7 +3,7 @@
 # Date created:		26 May 1997
 # Whom:			Satoshi TAOKA <taoka@infonets.hiroshima-u.ac.jp>
 #
-# $Id: Makefile,v 1.1.1.1 1997/06/23 12:30:28 max Exp $
+# $Id: Makefile,v 1.2 1997/09/14 21:34:44 max Exp $
 #
 
 DISTNAME=	kcc
@@ -14,7 +14,7 @@ MASTER_SITES=	ftp://ftp.eos.hokudai.ac.jp/pub/tools/
 MAINTAINER=	taoka@infonets.hiroshima-u.ac.jp
 
 INSTALL_TARGET=	install install.man
-MANLANG=	ja_JP.EUC
+MANLANG=	ja
 MAN1=		kcc.1
 
 .include <bsd.port.mk>
