--- a/misc/fd/Makefile
+++ b/misc/fd/Makefile
@@ -3,7 +3,7 @@
 # Date created:         20 Feb 1996
 # Whom:                 Nobuhiro Yasutomi <nobu@psrc.isac.co.jp>
 #
-# $Id: Makefile,v 1.8 1997/12/19 16:53:55 max Exp $
+# $Id: Makefile,v 1.9 1998/02/07 16:26:15 max Exp $
 #
 
 DISTNAME=	FD-1.03g
@@ -13,7 +13,7 @@ MASTER_SITES=	ftp://ftp.ics.es.osaka-u.ac.jp/pub/FDclone/
 
 MAINTAINER=	nobu@psrc.isac.co.jp
 
-MANLANG=	ja_JP.EUC
+MANLANG=	ja
 MAN1=		fd.1
 MAKE_ENV=	LANG=${MANLANG}
 
